# cvikernel

./: CMakeLists.txt
tests/: CMakeLists.txt  tiu_add_cx181.c  tiu_max_cv181x.c  tiu_min_cv181x.c  tiu_mul_cv181x.c  tiu_sub_cv181x.c  tiu_sub_cx181.c
tests/cv180x/: CMakeLists.txt
tests/cv181x/: Test_Framework.c  tiu_add_cv181x.c  tiu_and_cv181x.c  tiu_average_pooling_cv181x.c  tiu_convolution_cv181x.c  tiu_copy_cv181x.c  tiu_depthwise_convolution_cv181x.c  tiu_ge_cv181x.c  tiu_lookup_table_cv181x.c  tiu_mac_cv181x.c  tiu_matrix_multiplication_cv181x.c  tiu_matrix_multiplication_qm_cv181x.c  tiu_max_cv181x.c  tiu_max_pooling_cv181x.c  tiu_min_cv181x.c  tiu_min_pooling_cv181x.c  tiu_mul_cv181x.c  tiu_mul_qm_cv181x.c  tiu_or_cv181x.c  tiu_pt_convoluton_cv181x.c  tiu_pt_depthwise_convoluton_cv181x.c  tiu_shift_cv181x.c  tiu_sub_cv181x.c  tiu_xor_cv181x.c
